// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`An ECheckbox > looks like a checkbox > checked 1`] = `
<div data-app>
     <span>
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--checkbox primary--text">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-input--selection-controls__input">
                              <i aria-hidden="true"
                                 class="v-icon notranslate mdi mdi-checkbox-marked theme--light primary--text"></i>
                              <input aria-checked="true"
                                     id
                                     role="checkbox"
                                     type="checkbox"
                                     value>
                              <div class="v-input--selection-controls__ripple primary--text"></div>
                         </div>
                         <label class="v-label theme--light"
                                for
                                style="left: 0px; position: relative;">test</label>
                    </div>
               </div>
          </div>
     </span>
</div>
`;

exports[`An ECheckbox > looks like a checkbox > unchecked 1`] = `
<div data-app>
     <span>
          <div class="v-input v-input--hide-details theme--light v-input--selection-controls v-input--checkbox">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-input--selection-controls__input">
                              <i aria-hidden="true"
                                 class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i>
                              <input aria-checked="false"
                                     id
                                     role="checkbox"
                                     type="checkbox"
                                     value>
                              <div class="v-input--selection-controls__ripple"></div>
                         </div>
                         <label class="v-label theme--light"
                                for
                                style="left: 0px; position: relative;">test</label>
                    </div>
               </div>
          </div>
     </span>
</div>
`;
